# VM7

./: .gitignore  BinaryOperations.h  BitwiseOperations.h  CMakeLists.txt  Commands.cpp  Commands.h  Compare.h  IntegerMath.h  Jump.h  Jumps.h  Loader.cpp  Loader.h  Memory.cpp  Memory.h  Move.h  PSW.h  Processor.cpp  Processor.h  Real.h  RealMath.h  Registers.h  Structs.h  Types.h  main.cpp
